# red-iron-square

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  package-lock.json  package.json  playwright.config.ts  skills-lock.json
.agents/skills/executing-plans/: .skill4agent.json  SKILL.md
.agents/skills/frontend-design/: .skill4agent.json  SKILL.md
.agents/skills/python-design-patterns/: .skill4agent.json
.agents/skills/ux-audit-rethink/: .skill4agent.json  SKILL.md
.agents/skills/writing-plans/: .skill4agent.json  SKILL.md
backend/: .env.example  CHANGELOG.md  README.md  pyproject.toml
backend/examples/: actions.json  personality.json  scenarios.json  self_model.json
backend/src/: __init__.py
backend/src/ablation/: __init__.py  runner.py
backend/src/action_space/: __init__.py  caching_encoder.py  encoder.py  executor.py  llm_encoder.py  llm_proposer.py  params.py  pipeline.py  proposal.py  proposer.py  registry.py
backend/src/api/: __init__.py  app.py  campaign_models.py  campaign_router.py  campaign_schemas.py  campaign_service.py  campaign_store.py  run_client_builder.py  run_models.py  run_router.py  run_schemas.py  run_service.py  run_store.py  run_store_support.py  schemas.py  simulation_router.py
backend/src/constructed_emotion/: __init__.py  affect.py  free_energy.py  params.py  surprise.py
backend/src/demo/: __init__.py  audio.py  llm_service.py  models.py  personas.py  router.py  schemas.py  service.py  session_store.py  state_mapper.py
backend/src/efe/: __init__.py  c_vector.py  engine.py  epistemic.py  info_gain.py  params.py
backend/src/llm/: __init__.py  agent_runtime.py  anthropic_adapter.py  factory.py  openai_adapter.py  schemas.py
backend/src/meta/: __init__.py  objective.py  optimizer.py
backend/src/narrative/: __init__.py  model.py
backend/src/orchestrator/: __init__.py  agents.py  controller.py  models.py  router.py  schemas.py  store.py
backend/src/personality/: __init__.py  activations.py  decision.py  dimensions.py  hyperparameters.py  vectors.py
backend/src/precision/: __init__.py  engine.py  params.py  setpoints.py  state.py
backend/src/sdk/: __init__.py  builders.py  cli.py  decision_client.py  mappers.py  self_model_client.py  simulation_client.py  types.py
backend/src/self_evidencing/: __init__.py  modulator.py  params.py
backend/src/self_model/: __init__.py  emotions.py  model.py  params.py  simulator.py
backend/src/shared/: __init__.py  entropy.py  logging.py  protocols.py  types.py  validators.py
backend/src/simulation/: __init__.py  personality_framework.py  self_model.py  temporal_engine.py
backend/src/temporal/: __init__.py  affective_engine.py  detectors.py  emotions.py  generators.py  memory.py  precision_state.py  simulator.py  simulator_support.py  state.py  system2.py  tick_result.py
backend/src/ui/: __init__.py  api_client.py  app.py  demo_page.py  helpers.py  models.py
backend/src/ui/templates/ui/: campaigns.html  compare.html  demo.html  index.html  layout.html
backend/tests/: api_support.py  test_ablation.py  test_action_caching_encoder.py  test_action_encoder.py  test_action_executor.py  test_action_llm_encoder.py  test_action_llm_proposer.py  test_action_proposal.py  test_action_proposer.py  test_action_registry.py  test_agent_runtime.py  test_api.py  test_api_agents.py  test_api_basic.py  test_api_list_runs.py  test_api_open_ended.py  test_api_runs.py  test_campaign_api.py  test_campaign_service.py  test_campaign_store.py  test_constructed_emotion.py  test_demo_api.py  test_demo_audio.py  test_demo_llm_service.py  test_demo_models.py  test_demo_service.py  test_e2e.py  test_efe.py  test_efe_profiles.py  test_info_gain.py  test_llm.py  test_llm_schemas.py  test_meta.py  test_meta_controller.py  test_narrative_integration.py  test_narrative_model.py  test_open_ended_integration.py  test_orchestrator_agents.py  test_orchestrator_api.py  test_orchestrator_store.py  (+22 more)
docs/: BACKLOG.md  above-human-level-capabilities.md  personality-as-precision-landscape-1.0.md  personality-middleware-for-open-ended-agents-1.0.md  two-minds-demo-guideline-1.0.md  two-minds-demo-runbook.md
docs/deprecated/: 2026-03-11-full-php-implementation.md  2026-03-11-two-minds-demo-frontend.md  BACKLOG.md
docs/plans/: 2026-03-11-two-minds-demo-frontend.md  2026-03-12-memory-architecture-overhaul.md  2026-03-12-open-ended-action-space.md
e2e/: ux-audit.spec.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/scripts/: run-vitest.mjs
frontend/src/: App.tsx  main.tsx
frontend/src/__tests__/: App.test.tsx  reducer.test.ts
frontend/src/components/agents/: AgentCard.tsx  StateBar.tsx
frontend/src/components/layout/: DemoStage.tsx
frontend/src/components/scenario/: PresetButtons.tsx  ScenarioPanel.tsx
frontend/src/components/system/: StatusBanner.tsx  ThinkingState.tsx
frontend/src/demo/: api.ts  reducer.ts  socket.ts  types.ts  useDemoSession.ts
frontend/src/styles/: app.css  controls.css  stage.css  tokens.css
scripts/: check_loc.sh  run_mypy_hook.sh  run_pytest_hook.sh  start.sh
