[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "red-iron-square"
version = "0.1.0"
description = "Personality-driven agent simulation framework"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.7",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
]

[project.scripts]
red-iron-square = "src.sdk.cli:main"

[project.optional-dependencies]
api = [
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.api.app"
disallow_untyped_decorators = false

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP",
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D200",  # One-line docstring should fit on one line
    "D201",  # No blank line before docstring
    "D202",  # No blank line after docstring
    "D205",  # 1 blank line required between summary and description
    "D300",  # Use triple double quotes
    "D400",  # First line should end with a period
    "D401",  # First line should be in imperative mood
    "D403",  # First word of the first line should be capitalized
    "D414",  # Section has no content
    "D419",  # Docstring is empty
]

[tool.ruff.lint.pydocstyle]
# Google-style docstrings enforced via explicit rule selection above.
# Convention omitted to allow fine-grained D105/D107 exclusion.

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "D104"]
"tests/test_api.py" = ["E402"]
